# challenges

./: README.md
polonom/: README.adoc  README.md
polonom/soru_1/: add_code.cpp  test.h
polonom/soru_1/cozum_1/: CMakeLists.txt
polonom/soru_1/cozum_2/: CMakeLists.txt
polonom/soru_1/libs/: test.out
polonom/soru_2/: find_point.c
